# superquadric-grasp

./: .gitignore  CMakeLists.txt  README.md  index.html  superquadric-grasp.xml  superquadric-grasping.xml
app/: CMakeLists.txt
app/conf/: confTactileControlLib.ini  confTactileControlLib_iCubGenova01.ini  confTactileControlLib_left.ini  confTactileControlLib_right.ini  config-demo.ini  config-multiple.ini  config-r1.ini  config.ini  config.ini~  config_demo.ini  grasp_model_left.ini  grasp_model_right.ini  hand_sequences.ini
app/scripts/: superquadric-grasping.xml.template  superquadric-grasping.xml.template~
conf/: config.ini  grasp_model.ini  grasp_model.ini~
doxygen/: doc-compile.sh  generate.txt  generate.txt~
doxygen/doc/html/: annotated.html  classGraspComputation.html  classGraspExecution.html  classGraspVisualization.html  classGraspingModule.html  classes.html  classgrasping__NLP.html  classsuperquadricGrasp__IDL.html  computePose_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d6d9cae02a256ab35e2be3d8803e4934.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_q.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  graspComputation_8cpp_source.html  graspComputation_8h_source.html  graspExecution_8cpp_source.html  graspExecution_8h_source.html  graspModule_8cpp_source.html  (+12 more)
doxygen/doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  (+39 more)
doxygen/doc/latex/: annotated.tex  classGraspComputation.tex  classGraspExecution.tex  classGraspVisualization.tex  classGraspingModule.eps  classGraspingModule.tex  classgrasping__NLP.tex  classsuperquadricGrasp__IDL.eps  classsuperquadricGrasp__IDL.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d6d9cae02a256ab35e2be3d8803e4934.tex  group__superquadric-grasping.tex  hierarchy.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: superquadric-grasping.dox
idl_dox/: superquadricGrasp_IDL.h  superquadricGrasping_IDL.h
include/: graspComputation.h  graspExecution.h  graspModule.h  graspVisualization.h  superquadric.h
output/: objects  test-trajectory.txt  test.txt  test_left.txt  test_left2.txt  test_right.txt  test_right2.txt  test_right_robot.txt
output/0607/: config-cyl.ini  test-trajectory-cyl.txt  test_left_cyl.txt  test_left_tom3.txt  test_right_cyl.txt  test_right_tom.txt  test_right_tom2.txt  test_right_tom3.txt
output/0607/per-paper/: test_right_catbig.txt  test_right_catsmall\.txt  test_right_cyl_hor1.txt  test_right_cyl_hor2.txt  test_right_cyl_ver2.txt  test_right_cyl_vert1.txt  test_right_octo_big.txt  test_right_octo_small.txt  test_right_tomatosmall.txt
output/0707/cat/: test_right_cat1.txt  test_right_cat2.txt  test_right_cat6.txt  test_right_cat8.txt
output/0707/cyl/: test_right_cat10.txt  test_right_cat3.txt  test_right_cat4.txt  test_right_cat5.txt  test_right_cat7.txt  test_right_cat9.txt  test_right_cyl1.txt  test_right_cyl10.txt  test_right_cyl2.txt  test_right_cyl3.txt  test_right_cyl4.txt  test_right_cyl5.txt  test_right_cyl6.txt  test_right_cyl7.txt  test_right_cyl8.txt  test_right_cyl9.txt
output/0707/teddy/: test_right_teddy1.txt  test_right_teddy10.txt  test_right_teddy2.txt  test_right_teddy3.txt  test_right_teddy4.txt  test_right_teddy5.txt  test_right_teddy6.txt  test_right_teddy7.txt  test_right_teddy8.txt  test_right_teddy9.txt
output/1107/ladybug/: test_right_ladybug1.txt  test_right_ladybug10.txt  test_right_ladybug2.txt  test_right_ladybug3.txt  test_right_ladybug6.txt  test_right_ladybug8.txt  test_right_ladybug9.txt  test_right_ldaybug4.txt  test_right_ldaybug5.txt  test_right_ldaybug7.txt
output/1107/lattuce/: test_right_lattuce1.txt  test_right_lattuce10.txt  test_right_lattuce2.txt  test_right_lattuce3.txt  test_right_lattuce4.txt  test_right_lattuce5.txt  test_right_lattuce6.txt  test_right_lattuce7.txt  test_right_lattuce8.txt  test_right_lattuce9.txt
output/1107/turtle/: test_right_turtl5.txt  test_right_turtle1.txt  test_right_turtle10.txt  test_right_turtle2.txt  test_right_turtle3.txt  test_right_turtle4.txt  test_right_turtle6.txt  test_right_turtle7.txt  test_right_turtle8.txt  test_right_turtle9.txt
output/other-outputs/: test-trajectory.txt  test_left.txt  test_left_cat.txt  test_left_cyl2.txt  test_left_cyl3.txt  test_left_cyl4.txt  test_left_tom.txt  test_left_tom2.txt  test_left_tom4.txt  test_right.txt  test_right_cat.txt  test_right_cyl2.txt  test_right_cyl4.txt  test_right_left3.txt  test_right_octopus.txt  test_right_tom4.txt
output/precision-power/: powergrasp_left.fig  powergrasp_right.fig  precisiongrasp_left.fig  precisiongrasp_left2.fig  precisiongrasp_right.fig  precisiongrasp_right2.fig
output/test-sx/: test1.fig  test2.fig  test3.fig  test4.fig  test5.fig  test6.fig  test7.fig  test8.fig  test_left_1.txt  test_left_2.txt  test_left_3.txt  test_left_4.txt  test_left_5.txt  test_left_6.txt  test_left_7.txt  test_left_8.txt
src/: computePose.cpp  graspComputation.cpp  graspExecution.cpp  graspModule.cpp  graspVisualization.cpp  grasping.cpp  idl.thrift  idl.thrift~  main.cpp  superquadric.cpp
tutorial/: CMakeLists.txt  README.md
tutorial/app/conf/: config.ini
tutorial/app/script/: testing-graspmodule.xml.template
tutorial/src/: idl.thrift  main.cpp
